[metadata]
name = salem
description = Geoscientific data I/O and map projections
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://salem.readthedocs.io
author = Fabien Maussion
author_email = fabien.maussion@uibk.ac.at
license = BSD 3-clause
license_file = LICENSE.rst
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: GIS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Documentation = https://salem.readthedocs.io
    Source = https://github.com/fmaussion/salem
    Tracker = https://github.com/fmaussion/salem/issues

[options]
platforms = any
python_requires = >=3.6
packages = find:
include_package_data = True
setup_requires =
    setuptools_scm
install_requires =
    numpy
    scipy
    six
    pyproj
    joblib
    netCDF4
    pandas
    xarray

[options.packages.find]
exclude = docs

[bdist_wheel]
universal = 1
